<resources>
    <string name="app_name">问卷调查</string>
    <string-array name="sex_array">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="religion_array">
        <item>有</item>
        <item>无</item>
    </string-array>
    <string-array name="education_array">
        <item>文盲及半文盲</item>
        <item>小学</item>
        <item>初中</item>
        <item>高中/技校/中专</item>
        <item>大专及以上</item>
        <item>不详</item>
    </string-array>
    <string-array name="occupation_array">
        <item>国家机关/党群组织/企业/事业单位负责人</item>
        <item>专业技术人员</item>
        <item>办事人员和有关人员</item>
        <item>商业、服务业人员</item>
        <item>农林牧渔水利生产人员</item>
        <item>生产、运输设备操作人员及有关人员</item>
        <item>军人</item>
        <item>不便分类的其他从业人员</item>
    </string-array>
    <string-array name="marriage_array">
        <item>未婚</item>
        <item>已婚</item>
        <item>丧偶</item>
        <item>离婚</item>
        <item>未说明的婚姻状况</item>

    </string-array>
    <string-array name="payment_array">
        <item>城镇职工基本医疗保险</item>
        <item>城镇居民基本医疗保险</item>
        <item>新型农村合作医疗</item>
        <item>贫困救助</item>
        <item>商业医疗保险</item>
        <item>全公费</item>
        <item>全自费</item>
        <item>其他</item>
    </string-array>
    <string-array name="home_array">
        <item>独居</item>
        <item>与配偶/伴侣居住</item>
        <item>与子女居住</item>
        <item>与父母居住</item>
        <item>与兄弟姐妹居住</item>
        <item>与其他亲属居住</item>
        <item>与非亲属关系的人居住</item>
        <item>养老机构</item>
    </string-array>
    <string-array name="economy_array">
        <item>退休金/养老金</item>
        <item>子女补贴</item>
        <item>亲友资助</item>
        <item>其他补助</item>
    </string-array>
    <string-array name="oldhelp_array">
        <item>无</item>
        <item>配偶</item>
        <item>子女</item>
        <item>其他亲属</item>
        <item>专职陪护人员</item>
        <item>兼职陪护人员</item>
        <item>义工</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="radioA">是</string>
    <string name="radioB">否</string>
    <string name="radio1A">经常</string>
    <string name="radio1B">有时</string>
    <string name="radio1C">很少</string>
    <string name="radio1">很少有</string>
    <string name="radio2">有时有</string>
    <string name="radio3">大部分时间有</string>
    <string name="radio4">绝大多数时间有</string>
    <string name="radio11">偶/无</string>
    <string name="radio12">有时</string>
    <string name="radio13">经常</string>
    <string name="radio14">持续</string>
    <string name="radio21">无</string>
    <string name="radio22">轻微/间歇</string>
    <string name="radio23">严重</string>
    <string name="radio24">不能评价</string>
    <string name="radio31">自己完全可以做</string>
    <string name="radio32">有些困难但自己尚能完成</string>
    <string name="radio33">需要帮助</string>
    <string name="radio34">根本无法做</string>
    <string name="radio41">完全自理</string>
    <string name="radio42">有困难但能做</string>
    <string name="radio43">需人帮助</string>
    <string name="radio44">完全不能</string>
    <string name="radioS1">完全独立</string>
    <string name="radioS2">有条件独立</string>
    <string name="radioS3">监护和准备</string>
    <string name="radioS4">少量身体接触的帮助</string>
    <string name="radioS5">中量身体接触的帮助</string>
    <string name="radioS6">大量身体接触的帮助</string>
    <string name="radioS7">完全依赖</string>
    <string name="temp1">1.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp2">2.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp3">3.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp4">4.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp5">5.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp6">6.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp7">7.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp8">8.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp9">9.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp10">10.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp11">11.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp12">12.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp13">13.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp14">14.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp15">15.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp16">16.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp17">17.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp18">18.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="temp19">19.我感到早晨心情最好我感到早晨心情最好我感到早晨心情最好</string>
    <string name="mna1">1.在过去的3个月由于食欲下降、消化系统问题、咀嚼或吞咽困难，使食物摄入减少吗？</string>
    <string name="mna2">2.在最近3个月中有体重减轻</string>
    <string name="mna3">3.移动</string>
    <string name="mna4">4.在过去的3个月中，遭受心理压力或急性疾病</string>
    <string name="mna5">5.神经心理问题</string>
    <string name="mna6">6.体重指数（BMI）</string>
    <string name="mna7">7.可以独立生活（非护理院或医院）</string>
    <string name="mna8">8.每天服用三种以上处方药物</string>
    <string name="mna9">9.褥疮或皮肤溃疡</string>
    <string name="mna10">10.患者每日进几餐（指一日三餐）</string>
    <string name="mna11">11.选择摄入蛋白质的消耗量\n每日至少进食（牛奶酸奶中的一种）（是否）\n每周进食两种以上的豆类或蛋类（是否）\n每日进食肉、鱼或禽类（是否）</string>
    <string name="mna12">12.每日食用2种以上的水果和蔬菜</string>
    <string name="mna13">13.每日进食液体情况（水、果汁、咖啡、茶、奶等，1杯=250ml）</string>
    <string name="mna14">14.进食的方式</string>
    <string name="mna15">15.对自己营养状况的认识（病患自己觉得营养方面有无问题？）</string>
    <string name="mna16">16.患者认为与其他的同龄人相比自己的健康状况如何</string>
    <string name="mna17">17.上臂围（MAC，单位：cm）</string>
    <string name="mna18">18.小腿围（C.C，单位：cm）</string>
    <string name="tunyan1">1.不适合任何吞咽训练，仍不能经口进食</string>
    <string name="tunyan2">2.仅适合基本吞咽训练，仍不能经口进食</string>
    <string name="tunyan3">3.可进行摄食训练，但仍不能经口进食</string>
    <string name="tunyan4">4.在安慰中可能少量进食，但需要静脉营养</string>
    <string name="tunyan5">5.1至2种食物经口进食，需部分静脉营养</string>
    <string name="tunyan6">6.3种食物可经口进食，需部分静脉营养</string>
    <string name="tunyan7">7.3种食物可经口进食，不需静脉营养</string>
    <string name="tunyan8">8.除特别难咽的食物外，均可经口进食</string>
    <string name="tunyan9">9.可经口进食，但需临床观察指导</string>
    <string name="tunyan10">10.正常摄食吞咽功能</string>
    <string name="iciqsf1">1.您的遗尿次数？</string>
    <string name="iciqsf2">2.通常情况下，您的遗尿量是多少？（不管您是否使用了防护用品）</string>
    <string name="iciqsf3">3.总体上看，遗尿对您的日常生活影响程度如何？</string>
    <string name="iciqsf4">4.什么时候发生遗尿？</string>
    <string name="psqi1">1.近1个月，晚上上床睡觉通常</string>
    <string name="psqi2">2.近1个月，从上床到入睡通常需要</string>
    <string name="psqi3">3.近1个月，通常早上</string>
    <string name="psqi4">4.近1个月，每夜通常实际睡眠</string>
    <string name="psqi45">5.近1个月，因下列情况影响睡眠而烦恼</string>
    <string name="psqi5">（1）.入睡困难（30分钟内不能入睡）</string>
    <string name="psqi6">（2）.夜间易醒或早醒</string>
    <string name="psqi7">（3）.夜间去厕所</string>
    <string name="psqi8">（4）.呼吸不畅</string>
    <string name="psqi9">（5）.咳嗽或鼾声高</string>
    <string name="psqi10">（6）.感觉冷</string>
    <string name="psqi11">（7）.感觉热</string>
    <string name="psqi12">（8）.做噩梦</string>
    <string name="psqi13">（9）.疼痛不适</string>
    <string name="psqi14">（10）.其他影响睡眠的事情</string>
    <string name="psqi15">6.近1个月，总的来说，您认为自己的睡眠治疗</string>
    <string name="psqi16">7.近1个月，您用药物催眠的情况</string>
    <string name="psqi17">8.近1个月，您常感到困倦，难以保持清醒状态吗？</string>
    <string name="psqi18">9.近1个月，您做事的精力不足吗？</string>
    <string name="psqi19">10.近1个月，有无下列情况（请询问同寝室的人）</string>
    <string name="psqi20">（1）.高声打鼾</string>
    <string name="psqi21">（2）.睡眠中较长时间的呼吸暂停</string>
    <string name="psqi22">（3）.睡眠中腿部抽动或痉挛</string>
    <string name="psqi23">（4）.睡眠中出现不能辨认方向或意识模糊的情况</string>
    <string name="psqi24">（5）.睡眠中存在其他影响睡眠的特殊情况</string>
    <string name="fra1">1.步态异常/假肢</string>
    <string name="fra2">2.行走需要辅助设施</string>
    <string name="fra3">3.行走需要人帮助</string>
    <string name="fra4">4.有跌倒史</string>
    <string name="fra5">5.因跌倒住院</string>
    <string name="fra6">6.谵妄</string>
    <string name="fra7">7.痴呆</string>
    <string name="fra8">8.兴奋/行为异常</string>
    <string name="fra9">9.神志恍惚</string>
    <string name="fra10">10.失禁</string>
    <string name="fra11">11.频率增加</string>
    <string name="fra12">12.保留尿管</string>
    <string name="fra13">13.视觉受损</string>
    <string name="fra14">14.听觉受损</string>
    <string name="fra15">15.感觉性失语</string>
    <string name="fra16">16.其他情况</string>
    <string name="fra17">17.多醒</string>
    <string name="fra18">18.失眠</string>
    <string name="fra19">19.夜游症</string>
    <string name="fra20">20.新药</string>
    <string name="fra21">21.心血管药</string>
    <string name="fra22">22.降压药</string>
    <string name="fra23">23.镇静、催眠药</string>
    <string name="fra24">24.戒断治疗</string>
    <string name="fra25">25.糖尿病用药</string>
    <string name="fra26">26.抗癫痫药</string>
    <string name="fra27">27.麻醉药</string>
    <string name="fra28">28.其他</string>
    <string name="fra29">29.神经科疾病</string>
    <string name="fra30">30.骨质疏松症</string>
    <string name="fra31">31.骨折史</string>
    <string name="fra32">32.低血压</string>
    <string name="fra33">33.药物/酒精戒断</string>
    <string name="fra34">34.缺氧症</string>
    <string name="fra35">35.年龄>80岁</string>
    <string name="camcr1">1.(判断从前驱期到疾病发展期的时间)患者的精神状况有急性变化的证据吗</string>
    <string name="camcr2">2.请患者按顺序说出21到1之间的所有单数，患者的注意力难以集中吗？如容易注意涣散或难以交流吗？</string>
    <string name="camcr3">3.患者的思维是凌乱或不连贯的吗？例如，谈话主题散漫或不中肯，思维不清晰或不合逻辑，或从一个话题突然转到另一话题</string>
    <string name="camcr4">4.总体上看，您是如何评估该患者的意识水平</string>
    <string name="camcr5">5.在会面的任何时间患者存在定向障碍吗？例如，他认为自己是在其他地方而不是在医院，使用错的床位，或错误的判断一天的时间或错误的判断MMSE为基础的有关时间或空间定向</string>
    <string name="camcr6">6.（以会议MMSE中的三个词为主）在面谈时患者表现出记忆方面的问题吗？例如SE，不能回忆医院里面发生的事情，或难以回忆指令（包括回忆MMSE中的三个词）</string>
    <string name="camcr7">7.患者有直觉障碍的证据吗？例如，幻觉、错觉或对事物的曲解（如当某一东西移动，而患者认为他在移动）</string>
    <string name="camcr8">8.面谈时，患者有行为活动不正常的增加吗？例如坐立不安、轻微敲手指或突然变换位置</string>
    <string name="camcr9">9.面谈时，患者有运动行为水平的异常减少吗？例如，常懒散，缓慢进入某一控件、停留磨一位置时间过长或移动很慢</string>
    <string name="camcr10">10.患者的精神状况（注意力、思维、定向、记忆力）在面谈前或面谈中有波动吗？</string>
    <string name="camcr11">11.（患者日渐过度睡眠而夜间失眠）患者有睡眠-觉醒周期紊乱的证据吗？例如日间过度睡眠而夜间失眠</string>
    <string name="zung1">1.我感到比往常更加神经过敏和焦虑</string>
    <string name="zung2">2.我无缘无故感到担心</string>
    <string name="zung3">3.我更容易心烦意乱或感到恐慌</string>
    <string name="zung4">4.我感到我的身体好像被分成几块，支离破碎</string>
    <string name="zung5">5.我感到事事都很顺利，不会有倒霉的事情发生</string>
    <string name="zung6">6.我四肢抖动和震颤</string>
    <string name="zung7">7.我因头痛、颈痛。背痛而烦恼</string>
    <string name="zung8">8.我感到无力且容易疲劳</string>
    <string name="zung9">9.我感到很平静，能安静坐下来</string>
    <string name="zung10">10.我感到我的心跳较快</string>
    <string name="zung11">11.我因阵阵的眩晕而不舒服</string>
    <string name="zung12">12.我有阵阵要昏倒的感觉</string>
    <string name="zung13">13.我怕呼吸时进气和出气都不费力</string>
    <string name="zung14">14.我的手指和脚趾感到麻木和刺痛</string>
    <string name="zung15">15.我因胃痛和消化不良而苦恼</string>
    <string name="zung16">16.我必须时常排尿</string>
    <string name="zung17">17.我的手总是很温暖而干燥</string>
    <string name="zung18">18.我觉得连发烧发红</string>
    <string name="zung19">19.我容易入睡，晚上休息很好</string>
    <string name="zung20">20.我做噩梦</string>
    <string name="zungsds1">1.我感到情绪沮丧，郁闷</string>
    <string name="zungsds2">2.我感到早晨心情最好</string>
    <string name="zungsds3">3.我要哭或想哭</string>
    <string name="zungsds4">4.我夜间睡眠不好</string>
    <string name="zungsds5">5.我吃饭像平时一样多</string>
    <string name="zungsds6">6.我的性功能正常</string>
    <string name="zungsds7">7.我感到体重减轻</string>
    <string name="zungsds8">8.我为便秘而烦恼</string>
    <string name="zungsds9">9.我的心跳比平时快</string>
    <string name="zungsds10">10.我无故感到疲劳</string>
    <string name="zungsds11">11.我的头像往常一样清楚</string>
    <string name="zungsds12">12.我做事情像平时一样不感到困难</string>
    <string name="zungsds13">13.我坐卧不安，难以保持平静</string>
    <string name="zungsds14">14.我对未来感到有希望</string>
    <string name="zungsds15">15.我比平时更易激动</string>
    <string name="zungsds16">16.我觉得决定事情很容易</string>
    <string name="zungsds17">17.我感到自己是有用的和不可缺少的人</string>
    <string name="zungsds18">18.我的生活很有意义</string>
    <string name="zungsds19">19.假如我死了别人会过得更好</string>
</resources>