<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:text="@string/radio1" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio2" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio3" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio4" />
</merge>
