<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:text="@string/radio11" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio12" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio13" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio14" />
</merge>
