<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:text="@string/radio41" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio42" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio43" />

    <RadioButton
        android:layout_width="wrap_content"
        android:padding="@dimen/activity_margin_8"
        android:layout_height="wrap_content"
        android:text="@string/radio44" />
</merge>
