<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.FRAActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra1" />

        <RadioGroup
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra2" />

        <RadioGroup
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra3" />

        <RadioGroup
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra4" />

        <RadioGroup
            android:id="@+id/group4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra5" />

        <RadioGroup
            android:id="@+id/group5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra6" />

        <RadioGroup
            android:id="@+id/group6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra7" />

        <RadioGroup
            android:id="@+id/group7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra8" />

        <RadioGroup
            android:id="@+id/group8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra9" />

        <RadioGroup
            android:id="@+id/group9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra10" />

        <RadioGroup
            android:id="@+id/group10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra11" />

        <RadioGroup
            android:id="@+id/group11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra12" />

        <RadioGroup
            android:id="@+id/group12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra13" />

        <RadioGroup
            android:id="@+id/group13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra14" />

        <RadioGroup
            android:id="@+id/group14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra15" />

        <RadioGroup
            android:id="@+id/group15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra16" />

        <RadioGroup
            android:id="@+id/group16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra17" />

        <RadioGroup
            android:id="@+id/group17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra18" />

        <RadioGroup
            android:id="@+id/group18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra19" />

        <RadioGroup
            android:id="@+id/group19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra20" />

        <RadioGroup
            android:id="@+id/group20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra21" />

        <RadioGroup
            android:id="@+id/group21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra22" />

        <RadioGroup
            android:id="@+id/group22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra23" />

        <RadioGroup
            android:id="@+id/group23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra24" />

        <RadioGroup
            android:id="@+id/group24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra25" />

        <RadioGroup
            android:id="@+id/group25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra26" />

        <RadioGroup
            android:id="@+id/group26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra27" />

        <RadioGroup
            android:id="@+id/group27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra28" />

        <RadioGroup
            android:id="@+id/group28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra29" />

        <RadioGroup
            android:id="@+id/group29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra30" />

        <RadioGroup
            android:id="@+id/group30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra31" />

        <RadioGroup
            android:id="@+id/group31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra32" />

        <RadioGroup
            android:id="@+id/group32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra33" />

        <RadioGroup
            android:id="@+id/group33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra34" />

        <RadioGroup
            android:id="@+id/group34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin_8"
            android:text="@string/fra35" />

        <RadioGroup
            android:id="@+id/group35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include layout="@layout/two_radio_layout" />

        </RadioGroup>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginTop="@dimen/activity_margin_32"
            android:background="@color/colorLightBlue"
            android:padding="@dimen/activity_vertical_margin"
            android:text="填写完成"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</ScrollView>
